Switch from WebSockets to OPC client
Hitting message truncation bug with the websockets client when
addressing fadecandy channel 5 and up. Switched to poorly translated OPC
client to circumvent the problem.

Also made LED region aware of multiple strips.

--- a/ProjectBoardLEDMap/ProjectBoardLEDs.csproj
+++ b/ProjectBoardLEDMap/ProjectBoardLEDs.csproj
@@ -41,8 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BoardLocation.cs" />
     <Compile Include="LEDStripAnimator.cs" />
     <Compile Include="MappedProject.cs" />
+    <Compile Include="OPC.cs" />
     <Compile Include="Project.cs" />
     <Compile Include="ProjectStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
